fixed register, now public, does not need mod token
